--- a/interface/index.html
+++ b/interface/index.html
@@ -91,19 +91,19 @@
                 <table>
                     <tr>
                         <td>Negative (N)</td>
-                        <td><input class="regVal" id="n" type="text" name="n" value="0" disabled="disabled"/></td>
+                        <td><input class="regVal" id="n" type="text" name="n" value="0"/></td>
                     </tr>
                     <tr>
                         <td>Zero (Z)</td>
-                        <td><input class="regVal" id="z" type="text" name="z" value="0" disabled="disabled"/></td>
+                        <td><input class="regVal" id="z" type="text" name="z" value="0"/></td>
                     </tr>
                     <tr>
                         <td>Carry (C)</td>
-                        <td><input class="regVal" id="c" type="text" name="c" value="0" disabled="disabled"/></td>
+                        <td><input class="regVal" id="c" type="text" name="c" value="0"/></td>
                     </tr>
                     <tr>
                         <td>Overflow (V)</td>
-                        <td><input class="regVal" id="v" type="text" name="v" value="0" disabled="disabled"/></td>
+                        <td><input class="regVal" id="v" type="text" name="v" value="0"/></td>
                     </tr>
                 </table>
             </td>
@@ -173,10 +173,11 @@ hello: .asciz "Hello World!\n"
                 <b>Interruptions</b>
                 <hr/>
                 <div>
-                    <button onclick="simulate()">
-                        <img src="image/ex.png" alt="Simulate"/></button>
                     <button onclick="assemble()">Assemble</button>
-                    <button id="stepIn" onclick="stepIn()" disabled="disabled" class="hide">Step In</button>
+                    <button onclick="simulate()" disable="disabled">Run</button>
+                    <button id="stepin" onclick="stepIn()" disable="disabled">Step In</button>
+                    <button id="stepforward" onclick="stepIn()" disable="disabled">Step Forward</button>
+                    <button id="stepout" onclick="stepIn()" disable="disabled">Step Out</button>
                 </div>
                 Input (stdin)<br>
                 <textarea id="stdin_" name ="stdin" placeholder="your inputs here"></textarea><br>
@@ -199,6 +200,45 @@ hello: .asciz "Hello World!\n"
 
     <script type="text/javascript">
         $(document).ready(function() {
+
+            editor.session.on("changeScrollTop", function(scroll) {
+                setTimeout(function() {
+                    updateCodeErrors();
+                }, 100);
+            });
+
+			editor.on("guttermousedown", function(e){ 
+				var target = e.domEvent.target; 
+				if (target.className.indexOf("ace_gutter-cell") == -1) 
+					return; 
+				if (!editor.isFocused()) 
+					return; 
+				if (e.clientX > 25 + target.getBoundingClientRect().left) 
+					return; 
+
+				var row = e.getDocumentPosition().row ;
+                 
+                var index = $.inArray(row, asm_breakpoints);
+                if (index >= 0) {
+                    e.editor.session.clearBreakpoint(row);
+                    asm_breakpoints.splice(index, 1);
+                } else {
+                    e.editor.session.setBreakpoint(row);
+                    //e.stop();
+                    asm_breakpoints.push(row);
+                }
+                sendBreakpoints();
+			}) 
+
+            editor.on("change", function() {
+                removeCodeErrors();
+                $(".ace_content").css("background-color", "#FFF9F9");
+            });
+
+            $("input").change(function () {
+                ws.send(JSON.stringify(["update", $(this).attr("id"), $(this).val()]));
+            });
+
             $('#gp').tooltipster({
                 content: $('<table border="1"> \
                                 <thead>\
