--- a/interface/index.html
+++ b/interface/index.html
@@ -9,6 +9,15 @@
         </script>
         <script src="js/ace/theme-cobalt.js" type="text/javascript" charset="utf-8"></script>
         <script src="js/ace-custom/mode-assembly_arm.js" type="text/javascript" charset="utf-8"></script>
+
+        <script src="editablegrid/editablegrid.js"></script>
+        <!-- [DO NOT DEPLOY] --> <script src="editablegrid/editablegrid_renderers.js" ></script>
+        <!-- [DO NOT DEPLOY] --> <script src="editablegrid/editablegrid_editors.js" ></script>
+        <!-- [DO NOT DEPLOY] --> <script src="editablegrid/editablegrid_validators.js" ></script>
+        <!-- [DO NOT DEPLOY] --> <script src="editablegrid/editablegrid_utils.js" ></script>
+        <!-- [DO NOT DEPLOY] --> <script src="editablegrid/editablegrid_charts.js" ></script>
+        <link rel="stylesheet" href="editablegrid/editablegrid.css" type="text/css" media="screen">
+
     </head>
     <body id="body_">
     <!-- <h1 id="header"># ARM Editor Online #</h1> -->
@@ -159,16 +168,7 @@ hello: .asciz "Hello World!\n"
                 <div id="data"></div>
                 <br>
                 <b>Memory</b>
-                <table border="1">
-                    <thead>
-                        <tr>
-                            <th>Address</th>
-                            <th>Instruction</th>
-                        </tr>
-                    </thead>
-                    <tbody id="instructTBody">
-                    </tbody>
-                </table>
+                <div id="memoryview"></div>
                 <hr/>
                 <b>Interruptions</b>
                 <hr/>
@@ -199,6 +199,7 @@ hello: .asciz "Hello World!\n"
     <script src="js/comm.js" type="text/javascript" charset="utf-8"></script>
 
     <script type="text/javascript">
+        var editableGrid = null;
         $(document).ready(function() {
 
             editor.session.on("changeScrollTop", function(scroll) {
@@ -207,14 +208,14 @@ hello: .asciz "Hello World!\n"
                 }, 100);
             });
 
-			editor.on("guttermousedown", function(e){ 
-				var target = e.domEvent.target; 
-				if (target.className.indexOf("ace_gutter-cell") == -1) 
-					return; 
-				if (!editor.isFocused()) 
-					return; 
-				if (e.clientX > 25 + target.getBoundingClientRect().left) 
-					return; 
+			editor.on("guttermousedown", function(e) {
+				var target = e.domEvent.target;
+				if (target.className.indexOf("ace_gutter-cell") == -1)
+					return;
+				/*if (!editor.isFocused())
+					return;*/
+				if (e.clientX > 25 + target.getBoundingClientRect().left)
+					return;
 
 				var row = e.getDocumentPosition().row ;
                  
@@ -224,11 +225,10 @@ hello: .asciz "Hello World!\n"
                     asm_breakpoints.splice(index, 1);
                 } else {
                     e.editor.session.setBreakpoint(row);
-                    //e.stop();
                     asm_breakpoints.push(row);
                 }
                 sendBreakpoints();
-			}) 
+			})
 
             editor.on("change", function() {
                 removeCodeErrors();
@@ -255,6 +255,42 @@ hello: .asciz "Hello World!\n"
                             </table>'),
                 position: 'bottom'
             });
+
+            // Memory viewer
+            var metadata = [];
+            metadata.push({ name: "c0", label: "0", datatype: "string", editable: true});
+            metadata.push({ name: "c1", label: "1", datatype: "string", editable: true});
+            metadata.push({ name: "c2", label: "2", datatype: "string", editable: true});
+            metadata.push({ name: "c3", label: "3", datatype: "string", editable: true});
+            metadata.push({ name: "c4", label: "4", datatype: "string", editable: true});
+            metadata.push({ name: "c5", label: "5", datatype: "string", editable: true});
+            metadata.push({ name: "c6", label: "6", datatype: "string", editable: true});
+            metadata.push({ name: "c7", label: "7", datatype: "string", editable: true});
+            metadata.push({ name: "c8", label: "8", datatype: "string", editable: true});
+            metadata.push({ name: "c9", label: "9", datatype: "string", editable: true});
+
+            var data = [];
+            data.push({id: 1, values: {"c0": "00", "c1": "00", "c2": "00", "c3": "00", "c4": "00", "c5": "00", "c6": "00", "c7": "00", "c8": "00", "c9": "00"}});
+            data.push({id: 2, values: {"c0": "00", "c1": "00", "c2": "00", "c3": "00", "c4": "00", "c5": "00", "c6": "00", "c7": "00", "c8": "00", "c9": "00"}});
+            data.push({id: 3, values: {"c0": "00", "c1": "00", "c2": "00", "c3": "00", "c4": "00", "c5": "00", "c6": "00", "c7": "00", "c8": "00", "c9": "00"}});
+            data.push({id: 4, values: {"c0": "00", "c1": "00", "c2": "00", "c3": "00", "c4": "00", "c5": "00", "c6": "00", "c7": "00", "c8": "00", "c9": "00"}});
+            data.push({id: 5, values: {"c0": "00", "c1": "00", "c2": "00", "c3": "00", "c4": "00", "c5": "00", "c6": "00", "c7": "00", "c8": "00", "c9": "00"}});
+            data.push({id: 6, values: {"c0": "00", "c1": "00", "c2": "00", "c3": "00", "c4": "00", "c5": "00", "c6": "00", "c7": "00", "c8": "00", "c9": "00"}});
+            data.push({id: 7, values: {"c0": "00", "c1": "00", "c2": "00", "c3": "00", "c4": "00", "c5": "00", "c6": "00", "c7": "00", "c8": "00", "c9": "00"}});
+            data.push({id: 8, values: {"c0": "00", "c1": "00", "c2": "00", "c3": "00", "c4": "00", "c5": "00", "c6": "00", "c7": "00", "c8": "00", "c9": "00"}});
+            data.push({id: 9, values: {"c0": "00", "c1": "00", "c2": "00", "c3": "00", "c4": "00", "c5": "00", "c6": "00", "c7": "00", "c8": "00", "c9": "00"}});
+            data.push({id: 10, values: {"c0": "00", "c1": "00", "c2": "00", "c3": "00", "c4": "00", "c5": "00", "c6": "00", "c7": "00", "c8": "00", "c9": "00"}});
+             
+            editableGrid = new EditableGrid("DemoGridJsData", {
+                modelChanged: function(rowIndex, columnIndex, oldValue, newValue, row) { 
+                     console.log(rowIndex, columnIndex, row, newValue);
+                     var addr = 0;
+                     ws.send(JSON.stringify(['memchange', addr, newValue]));
+                }
+            });
+            editableGrid.load({"metadata": metadata, "data": data});
+            editableGrid.renderGrid("memoryview", "testgrid");
+
         });
     </script>
 
