--- a/interface/index.html
+++ b/interface/index.html
@@ -24,76 +24,76 @@
     <table id="content">
         <tr>
             <td id="regView">
-                <input id="bin" type="radio" name="representation" value="bin" onclick="changeBase(2);"/> bin
+                <!-- <input id="bin" type="radio" name="representation" value="bin" onclick="changeBase(2);"/> bin
                 <input id="dec" type="radio" name="representation" value="dec" onclick="changeBase(10);" checked="checked" /> dec
-                <input id="hex" type="radio" name="representation" value="hex" onclick="changeBase(16);"/> hex <br>
+                <input id="hex" type="radio" name="representation" value="hex" onclick="changeBase(16);"/> hex <br> -->
                 <br>
                 <b>Registers View</b> <br>
                 >> <i id="gp">General Purpose</i>
                 <table>
                     <tr>
                         <td>r0</td>
-                        <td><input class="regVal" id="r0" type="text" name="r0" value="0" onchange="changeRegVal('r0');"/></td>
+                        <td><input class="regVal" id="r0" type="text" name="r0" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r1</td>
-                        <td><input class="regVal" id="r1" type="text" name="r1" value="0" onchange="changeRegVal('r1');"/></td>
+                        <td><input class="regVal" id="r1" type="text" name="r1" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r2</td>
-                        <td><input class="regVal" id="r2" type="text" name="r2" value="0" onchange="changeRegVal('r2');"/></td>
+                        <td><input class="regVal" id="r2" type="text" name="r2" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r3</td>
-                        <td><input class="regVal" id="r3" type="text" name="r3" value="0" onchange="changeRegVal('r3');"/></td>
+                        <td><input class="regVal" id="r3" type="text" name="r3" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r4</td>
-                        <td><input class="regVal" id="r4" type="text" name="r4" value="0" onchange="changeRegVal('r4');"/></td>
+                        <td><input class="regVal" id="r4" type="text" name="r4" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r5</td>
-                        <td><input class="regVal" id="r5" type="text" name="r5" value="0" onchange="changeRegVal('r5');"/></td>
+                        <td><input class="regVal" id="r5" type="text" name="r5" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r6</td>
-                        <td><input class="regVal" id="r6" type="text" name="r6" value="0" onchange="changeRegVal('r6');"/></td>
+                        <td><input class="regVal" id="r6" type="text" name="r6" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r7</td>
-                        <td><input class="regVal" id="r7" type="text" name="r7" value="0" onchange="changeRegVal('r7');"/></td>
+                        <td><input class="regVal" id="r7" type="text" name="r7" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r8</td>
-                        <td><input class="regVal" id="r8" type="text" name="r8" value="0" onchange="changeRegVal('r8');"/></td>
+                        <td><input class="regVal" id="r8" type="text" name="r8" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r9</td>
-                        <td><input class="regVal" id="r9" type="text" name="r9" value="0" onchange="changeRegVal('r9');"/></td>
+                        <td><input class="regVal" id="r9" type="text" name="r9" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r10 (sl)</td>
-                        <td><input class="regVal" id="r10" type="text" name="r10" value="0" onchange="changeRegVal('r10');"/></td>
+                        <td><input class="regVal" id="r10" type="text" name="r10" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r11 (fp)</td>
-                        <td><input class="regVal" id="r11" type="text" name="r11" value="0" onchange="changeRegVal('r11');"/></td>
+                        <td><input class="regVal" id="r11" type="text" name="r11" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r12 (ip)</td>
-                        <td><input class="regVal" id="r12" type="text" name="r12" value="0" onchange="changeRegVal('r12');"/></td>
+                        <td><input class="regVal" id="r12" type="text" name="r12" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r13 (sp)</td>
-                        <td><input class="regVal" id="r13" type="text" name="r13" value="0" onchange="changeRegVal('r13');"/></td>
+                        <td><input class="regVal" id="r13" type="text" name="r13" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r14 (lr)</td>
-                        <td><input class="regVal" id="r14" type="text" name="r14" value="0" onchange="changeRegVal('r14');"/></td>
+                        <td><input class="regVal" id="r14" type="text" name="r14" value="0"/></td>
                     </tr>
                     <tr>
                         <td>r15 (pc)</td>
-                        <td><input class="regVal" id="r15" type="text" name="r15" value="0" onchange="changeRegVal('r15');"/></td>
+                        <td><input class="regVal" id="r15" type="text" name="r15" value="0"/></td>
                     </tr>
                 </table>
                 <div>>> <i>Current Program Status</i></div>
