--- a/interface/index.html
+++ b/interface/index.html
@@ -33,86 +33,86 @@
                 <table>
                     <tr>
                         <td>r0</td>
-                        <td><input class="regVal" id="r0" type="text" name="r0" value="0"/></td>
+                        <td><input class="regVal" id="r0" type="text" name="r0"/></td>
                     </tr>
                     <tr>
                         <td>r1</td>
-                        <td><input class="regVal" id="r1" type="text" name="r1" value="0"/></td>
+                        <td><input class="regVal" id="r1" type="text" name="r1"/></td>
                     </tr>
                     <tr>
                         <td>r2</td>
-                        <td><input class="regVal" id="r2" type="text" name="r2" value="0"/></td>
+                        <td><input class="regVal" id="r2" type="text" name="r2"/></td>
                     </tr>
                     <tr>
                         <td>r3</td>
-                        <td><input class="regVal" id="r3" type="text" name="r3" value="0"/></td>
+                        <td><input class="regVal" id="r3" type="text" name="r3"/></td>
                     </tr>
                     <tr>
                         <td>r4</td>
-                        <td><input class="regVal" id="r4" type="text" name="r4" value="0"/></td>
+                        <td><input class="regVal" id="r4" type="text" name="r4"/></td>
                     </tr>
                     <tr>
                         <td>r5</td>
-                        <td><input class="regVal" id="r5" type="text" name="r5" value="0"/></td>
+                        <td><input class="regVal" id="r5" type="text" name="r5"/></td>
                     </tr>
                     <tr>
                         <td>r6</td>
-                        <td><input class="regVal" id="r6" type="text" name="r6" value="0"/></td>
+                        <td><input class="regVal" id="r6" type="text" name="r6"/></td>
                     </tr>
                     <tr>
                         <td>r7</td>
-                        <td><input class="regVal" id="r7" type="text" name="r7" value="0"/></td>
+                        <td><input class="regVal" id="r7" type="text" name="r7"/></td>
                     </tr>
                     <tr>
                         <td>r8</td>
-                        <td><input class="regVal" id="r8" type="text" name="r8" value="0"/></td>
+                        <td><input class="regVal" id="r8" type="text" name="r8"/></td>
                     </tr>
                     <tr>
                         <td>r9</td>
-                        <td><input class="regVal" id="r9" type="text" name="r9" value="0"/></td>
+                        <td><input class="regVal" id="r9" type="text" name="r9"/></td>
                     </tr>
                     <tr>
                         <td>r10 (sl)</td>
-                        <td><input class="regVal" id="r10" type="text" name="r10" value="0"/></td>
+                        <td><input class="regVal" id="r10" type="text" name="r10"/></td>
                     </tr>
                     <tr>
                         <td>r11 (fp)</td>
-                        <td><input class="regVal" id="r11" type="text" name="r11" value="0"/></td>
+                        <td><input class="regVal" id="r11" type="text" name="r11"/></td>
                     </tr>
                     <tr>
                         <td>r12 (ip)</td>
-                        <td><input class="regVal" id="r12" type="text" name="r12" value="0"/></td>
+                        <td><input class="regVal" id="r12" type="text" name="r12"/></td>
                     </tr>
                     <tr>
                         <td>r13 (sp)</td>
-                        <td><input class="regVal" id="r13" type="text" name="r13" value="0"/></td>
+                        <td><input class="regVal" id="r13" type="text" name="r13"/></td>
                     </tr>
                     <tr>
                         <td>r14 (lr)</td>
-                        <td><input class="regVal" id="r14" type="text" name="r14" value="0"/></td>
+                        <td><input class="regVal" id="r14" type="text" name="r14"/></td>
                     </tr>
                     <tr>
                         <td>r15 (pc)</td>
-                        <td><input class="regVal" id="r15" type="text" name="r15" value="0"/></td>
+                        <td><input class="regVal" id="r15" type="text" name="r15"/></td>
                     </tr>
                 </table>
                 <div>>> <i>Current Program Status</i></div>
                 <table>
                     <tr>
                         <td>Negative (N)</td>
-                        <td><input class="regVal" id="n" type="text" name="n" value="0"/></td>
+                        <td><input class="regVal" id="n" type="text" name="n"/></td>
                     </tr>
                     <tr>
                         <td>Zero (Z)</td>
-                        <td><input class="regVal" id="z" type="text" name="z" value="0"/></td>
+                        <td><input class="regVal" id="z" type="text" name="z"/></td>
                     </tr>
                     <tr>
                         <td>Carry (C)</td>
-                        <td><input class="regVal" id="c" type="text" name="c" value="0"/></td>
+                        <td><input class="regVal" id="c" type="text" name="c"/></td>
                     </tr>
                     <tr>
                         <td>Overflow (V)</td>
-                        <td><input class="regVal" id="v" type="text" name="v" value="0"/></td>
+                        <td><input class="regVal" id="v" type="text" name="v"/></td>
                     </tr>
                 </table>
             </td>
@@ -200,23 +200,24 @@ variablemem DS32 10
                 <div id="lable"></div>
                 <div id="data"></div>
                 <br>
-                <b>Memory</b>
+                <b>M&eacute;moire</b>
                 <div id="memoryview"></div>
+                D&eacute;but:
                 <div id="paginator"></div>
                 <hr/>
                 <b>Interruptions</b>
                 <hr/>
                 <div>
-                    <button onclick="assemble()">Assemble</button>
-                    <button onclick="simulate()" disable="disabled">Run</button>
-                    <button id="stepin" onclick="sendMsg('stepinto')" disable="disabled">Step In</button>
-                    <button id="stepforward" onclick="sendMsg('stepforward')" disable="disabled">Step Forward</button>
-                    <button id="stepout" onclick="sendMsg('stepout')" disable="disabled">Step Out</button>
+                    <button onclick="assemble()" id="assemble">Assemble</button><br/><br/>
+                    <button onclick="simulate()" disable="disabled"><img src="./image/resume_co.gif"/></button>
+                    <button id="stepin" onclick="sendMsg('stepinto')" disable="disabled"><img src="./image/stepinto_co.gif"/></button>
+                    <button id="stepforward" onclick="sendMsg('stepforward')" disable="disabled"><img src="./image/stepover_co.gif"/></button>
+                    <button id="stepout" onclick="sendMsg('stepout')" disable="disabled"><img src="./image/stepreturn_co.gif"/></button>
                 </div>
-                Input (stdin)<br>
+                <!-- Input (stdin)<br>
                 <textarea id="stdin_" name ="stdin" placeholder="your inputs here"></textarea><br>
                 Output (stdout)<br>
-                <textarea id="stdout_" name="stdout" placeholder="your output here"></textarea>
+                <textarea id="stdout_" name="stdout" placeholder="your output here"></textarea> -->
             </td>
         </tr>
     </table>
@@ -336,37 +337,65 @@ variablemem DS32 10
 
             // get pages in interval (with links except for the current page)
             var pages = this.getPagesInInterval(interval, function(pageIndex, isCurrent) {
-                if (isCurrent) return "" + (pageIndex + 1);
-                return $("<a>").css("cursor", "pointer").html(pageIndex + 1).click(function(event) { editableGrid.setPageIndex(parseInt($(this).html()) - 1); });
+                if (isCurrent) return "0x" + (pageIndex * 10*10).toString(16);
+                console.log(pageIndex);
+                return $("<a>").css("cursor", "pointer").html("0x" + (pageIndex * 10*10).toString(16))
+                    .attr('rel', pageIndex + 1)
+                    .click(function(event) { editableGrid.setPageIndex(parseInt($(this).attr('rel')) - 1); });
             });
 
             // "first" link
-            var link = $("<a>").html("<img src='" + image("gofirst.png") + "'/>&nbsp;");
+            /*var link = $("<a>").html("<img src='" + image("gofirst.png") + "' style='height: 15px; vertical-align: middle;'/>&nbsp;");
             if (!this.canGoBack()) link.css({ opacity : 0.4, filter: "alpha(opacity=40)" });
             else link.css("cursor", "pointer").click(function(event) { editableGrid.firstPage(); });
             paginator.append(link);
 
             // "prev" link
-            link = $("<a>").html("<img src='" + image("prev.png") + "'/>&nbsp;");
+            link = $("<a>").html("<img src='" + image("prev.png") + "' style='height: 15px; vertical-align: middle;'/>&nbsp;");
             if (!this.canGoBack()) link.css({ opacity : 0.4, filter: "alpha(opacity=40)" });
             else link.css("cursor", "pointer").click(function(event) { editableGrid.prevPage(); });
-            paginator.append(link);
+            paginator.append(link);*/
 
             // pages
-            for (p = 0; p < pages.length; p++) paginator.append(pages[p]).append(" | ");
+            //for (p = 0; p < pages.length; p++) paginator.append(pages[p]).append(" | ");
+            for (p = 0; p < pages.length; p++) {
+                paginator.append(pages[p]).append("<br/>");
+            }
 
             // "next" link
-            link = $("<a>").html("<img src='" + image("next.png") + "'/>&nbsp;");
+            /*link = $("<a>").html("<img src='" + image("next.png") + "' style='height: 15px; vertical-align: middle;'/>&nbsp;");
             if (!this.canGoForward()) link.css({ opacity : 0.4, filter: "alpha(opacity=40)" });
             else link.css("cursor", "pointer").click(function(event) { editableGrid.nextPage(); });
             paginator.append(link);
 
             // "last" link
-            link = $("<a>").html("<img src='" + image("golast.png") + "'/>&nbsp;");
+            link = $("<a>").html("<img src='" + image("golast.png") + "' style='height: 15px; vertical-align: middle;'/>&nbsp;");
             if (!this.canGoForward()) link.css({ opacity : 0.4, filter: "alpha(opacity=40)" });
             else link.css("cursor", "pointer").click(function(event) { editableGrid.lastPage(); });
-            paginator.append(link);
+            paginator.append(link);*/
         };
+        function saveTextAsFile() {
+            var textToWrite = editor.getValue();
+            var textFileAsBlob = new Blob([textToWrite], {type: 'text/plain'});
+            var fileNameToSaveAs = "prog.s";
+            var downloadLink = document.createElement("a");
+            downloadLink.download = fileNameToSaveAs;
+            downloadLink.innerHTML = "Download File";
+            if (window.webkitURL !== null) {
+                // Chrome allows the link to be clicked
+                // without actually adding it to the DOM.
+                downloadLink.href = window.webkitURL.createObjectURL(textFileAsBlob);
+            }
+            else {
+                // Firefox requires the link to be added to the DOM
+                // before it can be clicked.
+                downloadLink.href = window.URL.createObjectURL(textFileAsBlob);
+                downloadLink.onclick = destroyClickedElement;
+                downloadLink.style.display = "none";
+                document.body.appendChild(downloadLink);
+            }
+            downloadLink.click();
+        }
     </script>
 
 </body>
