Improved a bit the interface

--- a/interface/index.html
+++ b/interface/index.html
@@ -30,7 +30,7 @@
                 <br>
                 <b>Registers View</b> <br>
                 >> <i id="gp">General Purpose</i>
-                <table>
+                <table id="registers">
                     <tr>
                         <td>r0</td>
                         <td><input class="regVal" id="r0" type="text" name="r0"/></td>
@@ -201,6 +201,7 @@ variablemem DS32 10
                 <div id="data"></div>
                 <br>
                 <b>M&eacute;moire</b>
+                TODO: Coloriser les cellules?
                 <div id="memoryview"></div>
                 D&eacute;but:
                 <div id="paginator"></div>
