Fixed interface bottom button sizes

--- a/interface/index.html
+++ b/interface/index.html
@@ -184,9 +184,9 @@ variablemem DS32 10
                     </div>
                     <div style="float: right;">
                         <button onclick="editor.setValue('');">
-                            <img src="image/cl.png" alt="Clear"/></button>
+                            <img src="image/cl.png" alt="Clear" style="height:30px;"/></button>
                         <button onclick="saveTextAsFile()">
-                            <img src="image/dl.png" alt="Download"/></button>
+                            <img src="image/dl.png" alt="Download" style="height:30px;"/></button>
                     </div>
                 </div>
                 <br>
