--- a/interface/index.html
+++ b/interface/index.html
@@ -31,89 +31,128 @@
                 <b>Registers View</b> <br>
                 >> <i id="gp">Registre G&eacute;n&eacute;raux</i>
                 <table id="registers">
+                    <thead>
+                    <tr>
+                        <th class="regh_name">Nom</th>
+                        <th class="regh_val">Valeur</th>
+                        <th class="regh_r">R</th>
+                        <th class="regh_w">W</th>
+                    </tr>
+                    </thead>
                     <tr>
                         <td>r0</td>
                         <td><input class="regVal" id="r0" type="text" name="r0"/></td>
-                        <td><input type="checkbox" name="r0_r" value="1"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r0" id="bp_r_r0"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r0" id="bp_w_r0"/></td>
                     </tr>
                     <tr>
                         <td>r1</td>
                         <td><input class="regVal" id="r1" type="text" name="r1"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r1" id="bp_r_r1"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r1" id="bp_w_r1"/></td>
                     </tr>
                     <tr>
                         <td>r2</td>
                         <td><input class="regVal" id="r2" type="text" name="r2"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r2" id="bp_r_r2"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r2" id="bp_w_r2"/></td>
                     </tr>
                     <tr>
                         <td>r3</td>
                         <td><input class="regVal" id="r3" type="text" name="r3"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r3" id="bp_r_r3"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r3" id="bp_w_r3"/></td>
                     </tr>
                     <tr>
                         <td>r4</td>
                         <td><input class="regVal" id="r4" type="text" name="r4"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r4" id="bp_r_r4"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r4" id="bp_w_r4"/></td>
                     </tr>
                     <tr>
                         <td>r5</td>
                         <td><input class="regVal" id="r5" type="text" name="r5"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r5" id="bp_r_r5"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r5" id="bp_w_r5"/></td>
                     </tr>
                     <tr>
                         <td>r6</td>
                         <td><input class="regVal" id="r6" type="text" name="r6"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r6" id="bp_r_r6"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r6" id="bp_w_r6"/></td>
                     </tr>
                     <tr>
                         <td>r7</td>
                         <td><input class="regVal" id="r7" type="text" name="r7"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r7" id="bp_r_r7"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r7" id="bp_w_r7"/></td>
                     </tr>
                     <tr>
                         <td>r8</td>
                         <td><input class="regVal" id="r8" type="text" name="r8"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r8" id="bp_r_r8"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r8" id="bp_w_r8"/></td>
                     </tr>
                     <tr>
                         <td>r9</td>
                         <td><input class="regVal" id="r9" type="text" name="r9"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r9" id="bp_r_r19"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r9" id="bp_w_r19"/></td>
                     </tr>
                     <tr>
                         <td>r10 (sl)</td>
                         <td><input class="regVal" id="r10" type="text" name="r10"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r10" id="bp_r_r10"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r10" id="bp_w_r10"/></td>
                     </tr>
                     <tr>
                         <td>r11 (fp)</td>
                         <td><input class="regVal" id="r11" type="text" name="r11"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r11" id="bp_r_r11"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r11" id="bp_w_r11"/></td>
                     </tr>
                     <tr>
                         <td>r12 (ip)</td>
                         <td><input class="regVal" id="r12" type="text" name="r12"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r12" id="bp_r_r12"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r12" id="bp_w_r12"/></td>
                     </tr>
                     <tr>
                         <td>r13 (sp)</td>
                         <td><input class="regVal" id="r13" type="text" name="r13"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r13" id="bp_r_r13"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r13" id="bp_w_r13"/></td>
                     </tr>
                     <tr>
                         <td>r14 (lr)</td>
                         <td><input class="regVal" id="r14" type="text" name="r14"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r14" id="bp_r_r14"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r14" id="bp_w_r14"/></td>
                     </tr>
                     <tr>
                         <td>r15 (pc)</td>
                         <td><input class="regVal" id="r15" type="text" name="r15"/></td>
+                        <td><input class="reg_r_cb" type="checkbox" name="bp_r_r15" id="bp_r_r15"/></td>
+                        <td><input class="reg_w_cb" type="checkbox" name="bp_w_r15" id="bp_w_r15"/></td>
                     </tr>
                 </table>
                 <div>>> <i>&Eacute;tat courant</i></div>
                 <table>
                     <tr>
                         <td>Negatif (N)</td>
-                        <td><input class="regVal" id="n" type="text" name="n"/></td>
+                        <td><button class="flag_btn" name="n"><input class="regVal" id="n" type="text" name="n" readonly/></button></td>
                     </tr>
                     <tr>
                         <td>Zero (Z)</td>
-                        <td><input class="regVal" id="z" type="text" name="z"/></td>
+                        <td><button class="flag_btn" name="z"><input class="regVal" id="z" type="text" name="z" readonly/></button></td>
                     </tr>
                     <tr>
                         <td>Emprunt (C)</td>
-                        <td><input class="regVal" id="c" type="text" name="c"/></td>
+                        <td><button class="flag_btn" name="c"><input class="regVal" id="c" type="text" name="c" readonly/></button></td>
                     </tr>
                     <tr>
                         <td>D&eacute;passement (V)</td>
-                        <td><input class="regVal" id="v" type="text" name="v"/></td>
+                        <td><button class="flag_btn" name="v"><input class="regVal" id="v" type="text" name="v" readonly/></button></td>
                     </tr>
                 </table>
                 <div>>> <i>Interruptions</i></div>
@@ -257,7 +296,7 @@ variablemem DS32 10
                     e.editor.session.setBreakpoint(row);
                     asm_breakpoints.push(row);
                 }
-                sendBreakpoints();
+                sendBreakpointsInstr();
 			})
 
             editor.on("change", function() {
@@ -269,6 +308,10 @@ variablemem DS32 10
             $("input").change(function () {
                 ws.send(JSON.stringify(["update", $(this).attr("id"), $(this).val()]));
             });
+
+            $(".flag_btn").click(function() {
+                ws.send(JSON.stringify(["update", $(this).attr("name")]));
+            })
 
             $('#gp').tooltipster({
                 content: $('<table border="1"> \
